# portex

./: .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  README.md  setup.cfg  setup.py
.github/workflows/: pre-commit.yaml
docs/source/: conf.py  index.rst
docs/source/_static/: style.css
docs/source/schema/: basic_grammar.rst  basic_syntax.rst  primitive_types.rst  template_type.rst  temporal_types.rst  type_import.rst  type_reference.rst
docs/source/schema/complex_types/: array.rst  enum.rst  index.rst  record.rst  tensor.rst
portex/: __init__.py  __version__.py
