#!/usr/bin/env python3
#
# Copyright 2022 Graviti. Licensed under MIT License.
#

[metadata]
name = portex
version = attr: portex.__version__
url = https://github.com/Project-OpenBytes/portex
author = Graviti
author_email = pypi@graviti.com
license = Apache License 2.0
license_file = LICENSE
keywords = portex, schema, openbytes
description = Portex Python Package
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:

[options.packages.find]
include = portex*
exclude = *.tests
